# RAG_prod

./: .env.example  .gitignore  README.md  debug_chunks.py  download_file.py  main.py  pdf_to_test.py  pyproject.toml  streamlit_app.py  test_chunking.py  test_kimi_final.py  test_pdf_to_text_fast.py
.trae/documents/: connect_pdf_ingestion_and_chunking_plan.md
chunking_and_embedding/: EvalQuestions.json  Eval_embedding_dimensions.py  Fix_pinecone_index.py  __init__.py  chunker.py  config.py  embedder.py  eval_dimensions.py  generate_eval_questions.py  logger.py  main.py  test_kimi.py  vector_store.py
combined_pipeline/: __init__.py  main.py
pdf_ingestion/: __init__.py  analyzer.py  auth.py  batcher.py  checkpoint.py  cleaner.py  config.py  docling_worker.py  extractor.py  logger.py  main.py  merger.py  pymupdf_worker.py  ui.py  utils.py
