[project]
name = "rag-project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.112.0",
    "docling-core>=2.87.0",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "psutil>=7.2.2",
    "pymupdf>=1.28.0",
    "requests>=2.34.2",
]
